# fastapi-backend

./: .gitignore  README.md  main.py  pyproject.toml
fastapi_backend/app/controllers/: bubble_controllers.py  pest_controllers.py  visit_controllers.py
fastapi_backend/app/models/: bubble_models.py  pest_models.py  visit_models.py
fastapi_backend/app/routes/: api.py
fastapi_backend/app/schemas/: database.py  db.py  visualisation.py
fastapi_backend/db/: __init__.py  db_manager.py  psql_connection.py  setup-dbs.sql
fastapi_backend/db/data/dev_data/: seed_data.json
fastapi_backend/db/data/test_data/: seed_data.json
fastapi_backend/db/schemas/: seed_models.py
fastapi_backend/db/seeds/: run_seed.py  seed.py
fastapi_backend/db/utils/: seed_utils.py
fastapi_backend/schemas/: seed_models.py
fastapi_backend/seeds/: seed.py
tests/: conftest.py  test_seed.py  test_server.py
tests/test_app/: conftest.py  test_app.py
tests/test_seed/: conftest.py  test_seed.py
